<resources>
    <string name="app_name">UXN_AGMS</string>
    <string name="back_press_to_exit">앱을 종료하려면 한 번 더 뒤로가기 버튼을 눌러주세요.</string>
    <string name="button_skip">건너뛰기</string>
    <string name="app_version">App version</string>
    <string name="intro_description">처음 오셨나요?\nUXN을 소개합니다.</string>
    <string name="title_glucose">혈당 체크</string>
    <string name="title_glucose_analysis">당뇨 분석</string>
    <string name="alert_message_exit_sign_up">현재까지 진행을 취소하고 첫 단계로 이동하시겠습니까?</string>
    <string name="intro3_description">데이터 분석을 통해 패턴을 인식하고\n의료진의 환자 진료와 관련된 지식,\n가이드라인을 학습하여 당뇨병 진료 시\n의사 결정 과정을 보조해 줄 수 있습니다.</string>
    <string name="intro_2_description">자가혈당 측정을 통해 식사, 운동,\n 스트레스에 따른 혈당 변화를 신속히 파악하여\n저혈당과 고혈당을 예방하고 혈당을\n목표 범위 내로 유지할 수 있습니다.</string>
    <string name="button_start">시작하기</string>
    <string name="button_login">로그인</string>
    <string name="button_signup">등록</string>
    <string name="login_title">Welcome to,\nAgms</string>
    <string name="base_info_title">계정 생성 정보</string>
    <string name="create_account_title">계정 등록</string>
    <string name="button_do_login">로그인</string>
    <string name="button_register">등록</string>
    <string name="button_next">다음</string>
    <string name="button_cancel">취소</string>
    <string name="message_welcome">환영합니다!\n이 앱으로 귀하의 당 측정치를 이해하는\n방법에 대해 알아보시기 바랍니다.</string>
    <string name="text_save_email">이메일 기억하기</string>
    <string name="text_auto_login">자동 로그인</string>
    <string name="text_password">비밀번호</string>
    <string name="text_gender">성별</string>
    <string name="text_password_confirm">비밀번호 확인</string>
    <string name="text_birth_date">생년월일</string>
    <string name="text_email">이메일</string>
    <string name="button_request_hospital">등록요청</string>
    <string name="button_input_hospital">직접등록</string>
    <string name="text_name">이름</string>
    <string name="button_agree">동의</string>
    <string name="button_disagree">비동의</string>
    <string name="checkbox_all">사용 약관을 읽었으며 명시적으로 동의합니다.</string>
    <string name="title_agree_eula">이용약관 동의</string>
    <string name="text_agree_eula">앱을 사용하기 위해선 아래의 약관 동의가 필요합니다.</string>
    <string name="checkbox_eula_1">기기의 사용을 위해 당사의 개인 정보 정책 및 이용 약관에 모두 동의합니다. (필수)</string>
    <string name="dialog_message_need_agree_eula">회원 가입을 위해서는 약관 동의가 필요합니다.</string>
    <string name="text_find_password">비밀번호 찾기</string>
    <string name="title_agree_term">사용 약관</string>
    <string name="title_account_created">계정 생성 완료!</string>
    <string name="title_setting">설정</string>
    <string name="description_account_created">새로운 계정 생성이 완료되었습니다.\n등록된 메일로 가입 완료 메일이 전송되었습니다.\n귀하의 혈당 수치를 공유할 병원을 등록하세요.</string>
    <string name="text_unit">측정단위</string>
    <string name="default_unit">mg/dL</string>
    <string name="default_target">70-180</string>
    <string name="default_alarm">진동</string>
    <string name="text_target">목표 혈당 범위</string>
    <string name="text_alarm">알람 설정</string>
    <string name="button_complete">완료</string>
    <string name="text_hospital_email">병원 관리자 이메일</string>
    <string name="text_hospital_input_direct">병원 관리자 비밀번호</string>
    <string name="alert_title_select_gender">성별을 선택해주세요</string>
    <string name="alert_title_select_alarm">알람 방식을 선택해주세요</string>
    <string name="alert_title_select_unit">단위를 선택해주세요</string>
    <string name="alert_title_select_target_min">최저값을 선택해주세요</string>
    <string name="alert_title_select_target_max">최고값을 선택해주세요</string>
    <string name="dialog_message_input_name">이름을 입력해주세요.</string>
    <string name="dialog_message_input_email">올바른 이메일을 입력해주세요.</string>
    <string name="dialog_message_input_password">비밀번호를 입력해주세요.</string>
    <string name="dialog_message_input_password_confirm">비밀번호를 한 번 더 입력해주세요.</string>
    <string name="dialog_message_input_password_not_equal">비밀번호가 일치하지 않습니다.</string>
    <string name="dialog_message_input_same_password">동일한 비밀번호를 입력하세요.</string>
    <string name="dialog_message_input_password_pattern">최소 6자 이상의 알파벳,숫자,특수기호가 포함된 비밀번호를 입력하세요.</string>
    <string name="dialog_message_select_gender">성별을 선택해주세요.</string>
    <string name="dialog_message_select_birth_date">생년월일을 선택해주세요.</string>
    <string name="dialog_message_input_hospital">병원정보를 선택해주세요.</string>
    <string name="manual_1_description">성공적으로 센서를 스캐닝한 후\n귀하의 당 측정치가 나타납니다.\n(1) 현재 당 수치, (2) 당 추세 화살표,\n(3) 당 그래프, (4) 당 메시지를 찾아보십시오.</string>
    <string name="manual_1_title">내 당</string>
    <string name="manual_2_description">귀하의 현재 당 수치에 따라\n배경 색상이 표시됩니다.</string>
    <string name="manual_2_title">당 배경 색상</string>
    <string name="manual_3_description">센서를 스캐닝하면,\n화살표가 귀하의 최근 당 추세를 나타냅니다.</string>
    <string name="manual_3_title">당 추세 화살표</string>
    <string name="loading">Loading...</string>
    <string name="setting_unit_title">측정 단위</string>
    <string name="setting_unit_description">국가에 따라 사용자의 당 측정 단위가 자동으로 설정됩니다.</string>
    <string name="setting_unit_select_country">사용자의 거주 국가</string>
    <string name="setting_unit_select_unit">사용자의 측정 단위</string>
    <string name="dialog_error_signup">회원가입 중 오류가 발생하였습니다.</string>
    <string name="dialog_error_signup_fail">회원가입을 할 수 없습니다.</string>
    <string name="dummy_title">AGMS</string>
    <string name="dummy_sub_title">(버전정보 &amp; 앱 설명)</string>
    <string name="dummy_start">시작하기</string>
    <string name="dummy_login">로그인</string>
    <string name="dummy_signup">회원 가입</string>
    <string name="dummy_device_connect_title">블루투스 활성화 및 권한 설정 안내</string>
    <string name="dummy_manual_connect">수동 연결</string>
    <string name="dummy_serial_hint">S/N : XXX_XXXX</string>
    <string name="dummy_qr_desc">QR 코드 위치 안내 그림</string>
    <string name="dummy_qr_code_scan">QR 코드 인식</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="scan_in_background">Scan in background</string>
    <string name="mac_address">MAC: %s</string>
    <string name="connection_state">State: %s</string>
    <string name="read_rssi">RSSI: %d</string>
    <string name="prefix_hex">0x</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="permission_error_message">기기 연결을 위하여 블루투스 관련 권한을 허용해주셔야 합니다.</string>
    <string name="bluetooth_on_error_message">기기 연결을 위하여 블루투스를 켜주세요.</string>
    <string name="alert_title">알림</string>
    <string name="start_activity">앱 열기</string>
    <string name="stop_bluetooth_connect">디바이스 연결 끊기</string>
    <string name="bluetooth_init_error">블루투스를 초기화할 수 없습니다.</string>
    <string name="toast_device_already_connected">이미 디바이스가 연결되어있습니다.</string>
    <string name="toast_device_connected">디바이스가 연결되어있습니다.</string>
    <string name="toast_device_scan_now">디바이스를 찾고 있습니다.</string>
    <string name="toast_device_start_connect">디바이스를 연결합니다.</string>
    <string name="alert_message_device_connect_error">기기와 스마트폰이 연결되지 않았습니다.</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="title_home">홈</string>
    <string name="title_login">로그인</string>
    <string name="title_self">자가진단</string>
    <string name="title_input">입력</string>
    <string name="title_range">경보 범위</string>
    <string name="message_login">환영합니다.\nAgms</string>
    <string name="message_user_name">User Name</string>
</resources>