<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_self"
        android:icon="@drawable/icon_self"
        android:title="@string/title_self" />

    <item
        android:id="@+id/navigation_input"
        android:icon="@drawable/icon_input"
        android:title="@string/title_input" />

    <item
        android:id="@+id/navigation_range"
        android:icon="@drawable/icon_range"
        android:title="@string/title_range" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/title_setting" />

</menu>