<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/loading_background">

    <TextView
        android:layout_marginTop="31dp"
        android:text="@string/login_title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textview_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:hint="@string/text_email"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="13dp"
        android:paddingRight="15dp"
        android:textSize="17sp"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_4DC091"
        android:background="@drawable/stroke_4dc091_r6"
        android:layout_marginTop="69dp"
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:minHeight="50dp"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="13dp"
        android:paddingRight="15dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_4DC091"
        android:background="@drawable/stroke_4dc091_r6"
        android:layout_marginTop="23dp"
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:drawableTint="#4DC091"
        android:minHeight="0dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="26dp"
        android:text="@string/text_save_email"
        android:id="@+id/checkbox_save_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:minHeight="0dp"
        android:drawableTint="#4DC091"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="8dp"
        android:text="@string/text_auto_login"
        android:id="@+id/checkbox_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:enabled="false"
        android:layout_marginTop="27dp"
        android:textSize="17sp"
        android:minHeight="50dp"
        android:paddingTop="13dp"
        android:paddingBottom="14dp"
        android:backgroundTint="@color/default_button_tint_color"
        android:textColor="@color/white"
        android:id="@+id/button_do_login"
        android:text="@string/button_do_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginTop="15dp"
        android:padding="0dp"
        android:minHeight="0dp"
        android:textSize="14sp"
        android:textColor="#56C79C"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_find_password"
        android:id="@+id/button_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>