<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_001B37"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/title_account_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="2dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/description_account_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="125dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/color_56C79C"
            android:text="@string/text_hospital_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_request_hospital"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/color_56C79C"
            android:text="@string/button_request_hospital"
            app:cornerRadius="6dp"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:minHeight="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textColor="@color/color_56C79C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/color_56C79C"
            android:text="@string/text_hospital_input_direct"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_input_hospital"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/color_56C79C"
            android:text="@string/button_input_hospital"
            app:cornerRadius="6dp"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:minHeight="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textColor="@color/color_56C79C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton

        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:paddingTop="12dp"
        android:paddingBottom="13dp"
        app:cornerRadius="4dp"
        android:minHeight="44dp"
        android:backgroundTint="@color/color_56C79C"
        android:textColor="@color/white"
        android:id="@+id/button_do_next"
        android:text="@string/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>