<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"

    android:background="@color/app_background"
    >

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/page_title"
        android:textStyle="bold"
        android:text="@string/title_login"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/page_title_line"
        android:layout_alignRight="@id/page_title"
        android:layout_alignLeft="@id/page_title"
        android:layout_marginTop="12dp"
        android:layout_below="@id/page_title"
        android:background="#56c79c"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/message_login"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:layout_below="@id/page_title_line"
        android:textColor="@color/text_color"
        android:text="@string/message_login"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="60dp"
        android:layout_below="@id/message_login"
        android:id="@+id/user_name_title"
        android:text="@string/message_user_name"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/edit_text"
        android:layout_marginTop="8dp"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_title"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_below="@id/username"
        android:id="@+id/password_title"
        android:text="@string/prompt_password"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        style="@style/edit_text"
        android:layout_below="@id/password_title"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="#fff"
        android:minHeight="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rectangle_56c79c_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:enabled="false"
        android:text="@string/action_sign_in" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</RelativeLayout>